--- a/app/components/people-list.hbs
+++ b/app/components/people-list.hbs
@@ -2,6 +2,8 @@
 
 <ul>
   {{#each @people as |person|}}
-    <li>{{person}}</li>
+    <li>
+      <button type="button">{{person}}</button>
+    </li>
   {{/each}}
 </ul>
